<resources>
    <string name="app_name">Weather</string>
    <string name="min">min</string>
    <string name="current">current</string>
    <string name="max">max</string>
    <string name="forecast_image">Forecast image</string>
    <string name="menu_places">Favourite places</string>
    <string name="menu_nav_home">Home</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="sunny">Sunny</string>
    <string name="cloudy">Cloudy</string>
    <string name="rainy">Rainy</string>
    <string name="loading_forecast">Loading forecast…</string>
    <string name="something_went_wrong">Something went wrong. Please try again later.\n\n%1$s</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="location_permission_needed">Your device\'s current position is needed to get the latest weather conditions.</string>
    <string name="request_permission">Request permission</string>
    <string name="location_permission">Location permission</string>
    <string name="places_selection_failed">Places selection failed</string>
    <string name="add_place">Add a new favourite place</string>
    <string name="failed_to_get_location">Failed to get current location</string>
    <string name="icon">icon</string>
    <string name="current_location">Current location</string>
    <string name="deleted">%1$s deleted</string>
    <string name="warning">Warning</string>
    <string name="confirm_deletion">Do you want to delete %1$s ? (This cannot be undone)</string>
    <string name="yes">Yes</string>
    <string name="recenter_map">Recenter map</string>
    <string name="snow">Snow</string>
    <string name="attribution">Attribution: %1$s</string>
    <string name="getting_current_location">Getting current location…</string>
    <string name="error">Error</string>
    <string name="failed_to_save_favourite">Failed to save favourite place. Please try again later.</string>
    <string name="failed_to_delete_favourite">Failed to delete location. Please try again later.</string>
    <string name="failed_to_get_location_image">Failed to get a photo for this location</string>
    <string name="failed_to_get_weather_forecast">Failed to get weather forecast</string>
    <string name="failed_to_get_current_location_s_weather">Failed to get current location\'s weather</string>
    <string name="now">Now</string>
    <string name="an_hour_ago">An hour ago</string>
    <string name="less_than_an_hour">Less than an hour ago</string>
    <string name="last_update">"Last update: "</string>
    <string name="app_logo">App logo</string>
    <string name="current_weather_icon">Current weather icon</string>
    <string name="place_image">Place\'s image</string>
</resources>