<?xml version="1.0" encoding="utf-8"?>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragments.HomeFragment">

            <LinearLayout
                android:id="@+id/ll_loading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="16dp"
                android:layout_marginTop="?actionBarSize"
                android:gravity="center"
                android:visibility="gone">
                <ProgressBar
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/loading_forecast"/>
            </LinearLayout>


            <androidx.core.widget.NestedScrollView
                android:id="@+id/forecast_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <FrameLayout
                        android:id="@+id/ll_current"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/ll_current_error"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingTop="24dp"
                            android:visibility="gone">

                            <TextView
                                android:id="@+id/tv_current_error"
                                android:paddingTop="?actionBarSize"
                                android:paddingBottom="?actionBarSize"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                tools:text="@string/something_went_wrong"/>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ll_current_weather"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/iv_forecast_bg"
                                    android:layout_width="match_parent"
                                    android:layout_height="360dp"
                                    android:contentDescription="@string/forecast_image"
                                    android:scaleType="centerCrop"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="128dp"
                                    android:gravity="center"
                                    android:orientation="vertical"
                                    android:paddingBottom="36dp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintHorizontal_bias="0.0"
                                    app:layout_constraintStart_toStartOf="parent">

                                    <TextView
                                        android:id="@+id/tv_temp"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="8dp"
                                        android:fontFamily="monospace"
                                        android:textColor="@color/white"
                                        android:textSize="64sp"
                                        android:textStyle="bold"
                                        tools:text="25°" />

                                    <TextView
                                        android:id="@+id/tv_forecast"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                                        android:textColor="@color/white"
                                        tools:text="SUNNY" />
                                </LinearLayout>

                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="8dp"
                                android:paddingStart="16dp"
                                android:paddingEnd="16dp">

                                <TextView
                                    android:gravity="center"
                                    android:id="@+id/tv_last_updated"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    tools:text="last updated"/>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:baselineAligned="false"
                                android:orientation="horizontal"
                                android:paddingStart="16dp"
                                android:paddingTop="8dp"
                                android:paddingEnd="16dp"
                                android:paddingBottom="8dp">

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="start"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/tv_min"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                        android:textColor="@color/white"
                                        tools:text="25°" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/min"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                        android:textColor="@color/white" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/tv_current"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                        android:textColor="@color/white"
                                        tools:text="25°" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/current"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                        android:textColor="@color/white" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="end"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/tv_max"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                        android:textColor="@color/white"
                                        tools:text="25°" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/max"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                        android:textColor="@color/white" />
                                </LinearLayout>

                            </LinearLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:background="@color/white" />

                        </LinearLayout>

                    </FrameLayout>


                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_week_forecast"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:itemCount="5"
                            android:paddingBottom="?actionBarSize"
                            tools:listitem="@layout/list_item_forecast"
                            android:visibility="gone"/>

                        <LinearLayout
                            android:id="@+id/ll_forecast_error"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingTop="24dp"
                            android:visibility="gone">

                            <TextView
                                android:paddingTop="?actionBarSize"
                                android:paddingBottom="?actionBarSize"
                                android:id="@+id/tv_forecast_error"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                tools:text="@string/something_went_wrong"/>
                        </LinearLayout>

                    </FrameLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>


        </FrameLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


